5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4175/executions/1646_2724.log
== SUBMITION (2019-04-16 01:15:10) 
-- CODE:
a = int(input())
b = int(input())
c = int(input())

if (a>b) == False:
	if (a>c) == True:
		if(b>c) == True or (b>c) == False:			
			print(a)
				
if (a>b) == True:
	if (a>c) == True or (a>c) == False:
		if(b>c) == True:
			print(b)

if (a>b) == True or (a>b) == False:
	if (a>c) == True:		
		if(b>c) == False:			
			print(c)
-- EXECUTION TIME:
0.141832
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
258
---- user output:
258
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
77
---- user output:
77
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
456
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 01:15:11) 
-- CODE:
a = int(input())
b = int(input())
c = int(input())

if (a>b) == False:
	if (a>c) == True:
		if(b>c) == True or (b>c) == False:			
			print(a)
				
if (a>b) == True:
	if (a>c) == True or (a>c) == False:
		if(b>c) == True:
			print(b)

if (a>b) == True or (a>b) == False:
	if (a>c) == True:		
		if(b>c) == False:			
			print(c)
-- OUTPUT:
258
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 01:28:43) 
-- CODE:
a = int(input())
b = int(input())
c = int(input())

if (a>b) == True:
	if (a>c) == False:
		if(b>c) == True or (b>c) == False:			
			print(a)
				
if (a>b) == True:
	if (a>c) == True or (a>c) == False:
		if(b>c) == True:
			print(b)

if (a>b) == True or (a>b) == False:
	if (a>c) == True:
		if(b>c) == False:			
			print(c)

			
-- EXECUTION TIME:
0.139346
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
258
---- user output:

-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
77
---- user output:
77
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
456
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 01:28:43) 
-- CODE:
a = int(input())
b = int(input())
c = int(input())

if (a>b) == True:
	if (a>c) == False:
		if(b>c) == True or (b>c) == False:			
			print(a)
				
if (a>b) == True:
	if (a>c) == True or (a>c) == False:
		if(b>c) == True:
			print(b)

if (a>b) == True or (a>b) == False:
	if (a>c) == True:
		if(b>c) == False:			
			print(c)

			
-- OUTPUT:
258
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 01:29:07) 
-- CODE:
a = int(input())
b = int(input())
c = int(input())

if (a>b) == True:
	if (a>c) == False:
		if(b>c) == True or (b>c) == False:			
			print(a)
				
if (a>b) == True:
	if (a>c) == True or (a>c) == False:
		if(b>c) == True:
			print(b)

if (a>b) == True or (a>b) == False:
	if (a>c) == True:
		if(b>c) == False:	
			print(c)

			
-- EXECUTION TIME:
0.181729
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
258
---- user output:

-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
77
---- user output:
77
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
456
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 01:29:10) 
-- CODE:
a = int(input())
b = int(input())
c = int(input())

if (a>b) == True:
	if (a>c) == False:
		if(b>c) == True or (b>c) == False:			
			print(a)
				
if (a>b) == True:
	if (a>c) == True or (a>c) == False:
		if(b>c) == True:
			print(b)

if (a>b) == True or (a>b) == False:
	if (a>c) == True:
		if(b>c) == False:	
			print(c)

			
-- OUTPUT:
258
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 01:29:21) 
-- CODE:
a = int(input())
b = int(input())
c = int(input())

if (a>b) == True:
	if (a>c) == False:
		if(b>c) == True or (b>c) == False:			
			print(a)
				
if (a>b) == True:
	if (a>c) == True or (a>c) == False:
		if(b>c) == True:
			print(b)

if (a>b) == True or (a>b) == False:
	if (a>c) == True:
		if(b>c) == False:	
			print(c)

			
-- OUTPUT:
258
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 01:29:24) 
-- CODE:
a = int(input())
b = int(input())
c = int(input())

if (a>b) == True:
	if (a>c) == False:
		if(b>c) == True or (b>c) == False:			
			print(a)
				
if (a>b) == True:
	if (a>c) == True or (a>c) == False:
		if(b>c) == True:
			print(b)

if (a>b) == True or (a>b) == False:
	if (a>c) == True:
		if(b>c) == False:	
			print(c)

			
-- OUTPUT:
258
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 01:29:27) 
-- CODE:
a = int(input())
b = int(input())
c = int(input())

if (a>b) == True:
	if (a>c) == False:
		if(b>c) == True or (b>c) == False:			
			print(a)
				
if (a>b) == True:
	if (a>c) == True or (a>c) == False:
		if(b>c) == True:
			print(b)

if (a>b) == True or (a>b) == False:
	if (a>c) == True:
		if(b>c) == False:	
			print(c)

			
-- OUTPUT:
258
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 01:29:59) 
-- CODE:
a = int(input())
b = int(input())
c = int(input())

if (a>b) == True:
	if (a>c) == False:
		if(b>c) == True or (b>c) == False:			
			print(a)
				
if (a>b) == True:
	if (a>c) == True or (a>c) == False:
		if(b>c) == True:
			print(b)

if (a>b) == True or (a>b) == False:
	if (a>c) == True:
		if(b>c) == False:	
			print(c)

			
-- OUTPUT:
258
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 01:30:01) 
-- CODE:
a = int(input())
b = int(input())
c = int(input())

if (a>b) == True:
	if (a>c) == False:
		if(b>c) == True or (b>c) == False:			
			print(a)
				
if (a>b) == True:
	if (a>c) == True or (a>c) == False:
		if(b>c) == True:
			print(b)

if (a>b) == True or (a>b) == False:
	if (a>c) == True:
		if(b>c) == False:	
			print(c)

			
-- OUTPUT:
258
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 01:30:04) 
-- CODE:
a = int(input())
b = int(input())
c = int(input())

if (a>b) == True:
	if (a>c) == False:
		if(b>c) == True or (b>c) == False:			
			print(a)
				
if (a>b) == True:
	if (a>c) == True or (a>c) == False:
		if(b>c) == True:
			print(b)

if (a>b) == True or (a>b) == False:
	if (a>c) == True:
		if(b>c) == False:	
			print(c)

			
-- OUTPUT:
258
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 01:30:07) 
-- CODE:
a = int(input())
b = int(input())
c = int(input())

if (a>b) == True:
	if (a>c) == False:
		if(b>c) == True or (b>c) == False:			
			print(a)
				
if (a>b) == True:
	if (a>c) == True or (a>c) == False:
		if(b>c) == True:
			print(b)

if (a>b) == True or (a>b) == False:
	if (a>c) == True:
		if(b>c) == False:	
			print(c)

			
-- OUTPUT:
258
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 01:30:09) 
-- CODE:
a = int(input())
b = int(input())
c = int(input())

if (a>b) == True:
	if (a>c) == False:
		if(b>c) == True or (b>c) == False:			
			print(a)
				
if (a>b) == True:
	if (a>c) == True or (a>c) == False:
		if(b>c) == True:
			print(b)

if (a>b) == True or (a>b) == False:
	if (a>c) == True:
		if(b>c) == False:	
			print(c)

			
-- OUTPUT:
258
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 08:51:47) 
-- CODE:
a = int(input())
b = int(input())
c = int(input())

if (a>b) == False:
	if (a>c) == True:
		if(b>c) == True:			
			print(a)
				
if (a>b) == True:
	if (a>c) == True:
		if(b>c) == True:
			print(b)

if (a>b) == True:
	if (a>c) == True:
		if(b>c) == False:	
			print(c)

			
-- EXECUTION TIME:
0.182178
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
258
---- user output:
258
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
77
---- user output:
77
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
456
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 08:51:48) 
-- CODE:
a = int(input())
b = int(input())
c = int(input())

if (a>b) == False:
	if (a>c) == True:
		if(b>c) == True:			
			print(a)
				
if (a>b) == True:
	if (a>c) == True:
		if(b>c) == True:
			print(b)

if (a>b) == True:
	if (a>c) == True:
		if(b>c) == False:	
			print(c)

			
-- OUTPUT:
258
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 08:51:53) 
-- CODE:
a = int(input())
b = int(input())
c = int(input())

if (a>b) == False:
	if (a>c) == True:
		if(b>c) == True:			
			print(a)
				
if (a>b) == True:
	if (a>c) == True:
		if(b>c) == True:
			print(b)

if (a>b) == True:
	if (a>c) == True:
		if(b>c) == False:	
			print(c)

			
-- OUTPUT:
258
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 08:53:08) 
-- CODE:
a = int(input())
b = int(input())
c = int(input())

if (a>b) == False:
	if (a>c) == True:
		if(b>c) == True:			
			print(a)
				
if (a>b) == True:
	if (a>c) == True:
		if(b>c) == True:
			print(b)

if (a>b) == True:
	if (a>c) == True:
		if(b>c) == False:	
			print(c)

			
-- OUTPUT:
258
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 08:53:17) 
-- CODE:
a = int(input())
b = int(input())
c = int(input())

if (a>b) == False:
	if (a>c) == True:
		if(b>c) == True:			
			print(a)
				
if (a>b) == True:
	if (a>c) == True:
		if(b>c) == True:
			print(b)

if (a>b) == True:
	if (a>c) == True:
		if(b>c) == False:	
			print(c)

			
-- OUTPUT:
258
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 08:53:20) 
-- CODE:
a = int(input())
b = int(input())
c = int(input())

if (a>b) == False:
	if (a>c) == True:
		if(b>c) == True:			
			print(a)
				
if (a>b) == True:
	if (a>c) == True:
		if(b>c) == True:
			print(b)

if (a>b) == True:
	if (a>c) == True:
		if(b>c) == False:	
			print(c)

			
-- OUTPUT:
258
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 08:57:21) 
-- CODE:
a = int(input())
b = int(input())
c = int(input())

if (a>b) == False and (a>c) == True:
	if(b>c) == True:			
		print(a)
				
if (a>b) == True and (a>c) == True:
	if(b>c) == True:
		print(b)

if (a>b) == True and (a>c) == True:
	if(b>c) == False:	
		print(c)

			
-- OUTPUT:
258
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 08:57:27) 
-- CODE:
a = int(input())
b = int(input())
c = int(input())

if (a>b) == False and (a>c) == True:
	if(b>c) == True:			
		print(a)
				
if (a>b) == True and (a>c) == True:
	if(b>c) == True:
		print(b)

if (a>b) == True and (a>c) == True:
	if(b>c) == False:	
		print(c)

			
-- OUTPUT:
258
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 09:06:51) 
-- CODE:
a = int(input())
b = int(input())
c = int(input())

if (a>b) == False and (a>c) == True:
	if(b>c) == True:			
		print(a)
				
if (a>b) == True and (a>c) == True:
	if(b>c) == True:
		print(b)

if (a>b) == True and (a>c) == True:
	if(b>c) == False:	
		print(c)

			
-- OUTPUT:
258
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 09:06:56) 
-- CODE:
a = int(input())
b = int(input())
c = int(input())

if (a>b) == False and (a>c) == True:
	if(b>c) == True:			
		print(a)
				
if (a>b) == True and (a>c) == True:
	if(b>c) == True:
		print(b)

if (a>b) == True and (a>c) == True:
	if(b>c) == False:	
		print(c)

			
-- OUTPUT:
258
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 09:24:43) 
-- CODE:
a = int(input())
b = int(input())
c = int(input())

if (a>b) == False:
	if (a>c) == True:
		if(b>c) == True:
			print(a)

if (a>b) == True:
	if (a>c) == True:
		if(b>c) == True:
			print(b)

if (a>b) == True:
	if (a>c) == True:
		if(b>c) == False:
			print(c)

			
-- OUTPUT:
258
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 09:24:46) 
-- CODE:
a = int(input())
b = int(input())
c = int(input())

if (a>b) == False:
	if (a>c) == True:
		if(b>c) == True:
			print(a)

if (a>b) == True:
	if (a>c) == True:
		if(b>c) == True:
			print(b)

if (a>b) == True:
	if (a>c) == True:
		if(b>c) == False:
			print(c)

			
-- OUTPUT:
258
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 09:27:37) 
-- CODE:
a = int(input())
b = int(input())
c = int(input())

if (a>b) == False:
	if (a>c) == True:
		if(b>c) == True:
			print(a)
if (a>b) == True:
	if (a>c) == False:
		if (b>c) == False:

if (a>b) == True:
	if (a>c) == True:
		if(b>c) == True:
			print(b)
if (a>b) == False:
	if (a>c) == False:
		if(b>c) == False:
			print(b)

if (a>b) == True:
	if (a>c) == True:
		if(b>c) == False:
			print(c)

if (a>b) == False:
	if (a>c) == False:
		if(b>c) == True:
			print(c)
			
-- EXECUTION TIME:
0.17719
-- ERROR:
  File "/home/codebench/codes/1646/2724/main.py", line 13
    if (a>b) == True:
    ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 09:27:38) 
-- CODE:
a = int(input())
b = int(input())
c = int(input())

if (a>b) == False:
	if (a>c) == True:
		if(b>c) == True:
			print(a)
if (a>b) == True:
	if (a>c) == False:
		if (b>c) == False:

if (a>b) == True:
	if (a>c) == True:
		if(b>c) == True:
			print(b)
if (a>b) == False:
	if (a>c) == False:
		if(b>c) == False:
			print(b)

if (a>b) == True:
	if (a>c) == True:
		if(b>c) == False:
			print(c)

if (a>b) == False:
	if (a>c) == False:
		if(b>c) == True:
			print(c)
			
-- ERROR:
File "XXXX", line 13
    if (a>b) == True:
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 09:27:58) 
-- CODE:
a = int(input())
b = int(input())
c = int(input())

if (a>b) == False:
	if (a>c) == True:
		if(b>c) == True:
			print(a)
if (a>b) == True:
	if (a>c) == False:
		if (b>c) == False:

if (a>b) == True:
	if (a>c) == True:
		if(b>c) == True:
			print(b)
			
if (a>b) == False:
	if (a>c) == False:
		if(b>c) == False:
			print(b)

if (a>b) == True:
	if (a>c) == True:
		if(b>c) == False:
			print(c)

if (a>b) == False:
	if (a>c) == False:
		if(b>c) == True:
			print(c)
			
-- ERROR:
File "XXXX", line 13
    if (a>b) == True:
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 09:28:15) 
-- CODE:
a = int(input())
b = int(input())
c = int(input())

if (a>b) == False:
	if (a>c) == True:
		if(b>c) == True:
			print(a)
if (a>b) == True:
	if (a>c) == False:
		if (b>c) == False:
			print(a)

if (a>b) == True:
	if (a>c) == True:
		if(b>c) == True:
			print(b)
			
if (a>b) == False:
	if (a>c) == False:
		if(b>c) == False:
			print(b)

if (a>b) == True:
	if (a>c) == True:
		if(b>c) == False:
			print(c)

if (a>b) == False:
	if (a>c) == False:
		if(b>c) == True:
			print(c)
			
-- OUTPUT:
258
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 09:28:21) 
-- CODE:
a = int(input())
b = int(input())
c = int(input())

if (a>b) == False:
	if (a>c) == True:
		if(b>c) == True:
			print(a)
if (a>b) == True:
	if (a>c) == False:
		if (b>c) == False:
			print(a)

if (a>b) == True:
	if (a>c) == True:
		if(b>c) == True:
			print(b)
			
if (a>b) == False:
	if (a>c) == False:
		if(b>c) == False:
			print(b)

if (a>b) == True:
	if (a>c) == True:
		if(b>c) == False:
			print(c)

if (a>b) == False:
	if (a>c) == False:
		if(b>c) == True:
			print(c)
			
-- OUTPUT:
258
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 09:28:23) 
-- CODE:
a = int(input())
b = int(input())
c = int(input())

if (a>b) == False:
	if (a>c) == True:
		if(b>c) == True:
			print(a)
if (a>b) == True:
	if (a>c) == False:
		if (b>c) == False:
			print(a)

if (a>b) == True:
	if (a>c) == True:
		if(b>c) == True:
			print(b)
			
if (a>b) == False:
	if (a>c) == False:
		if(b>c) == False:
			print(b)

if (a>b) == True:
	if (a>c) == True:
		if(b>c) == False:
			print(c)

if (a>b) == False:
	if (a>c) == False:
		if(b>c) == True:
			print(c)
			
-- OUTPUT:
258
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 09:28:30) 
-- CODE:
a = int(input())
b = int(input())
c = int(input())

if (a>b) == False:
	if (a>c) == True:
		if(b>c) == True:
			print(a)
if (a>b) == True:
	if (a>c) == False:
		if (b>c) == False:
			print(a)

if (a>b) == True:
	if (a>c) == True:
		if(b>c) == True:
			print(b)
			
if (a>b) == False:
	if (a>c) == False:
		if(b>c) == False:
			print(b)

if (a>b) == True:
	if (a>c) == True:
		if(b>c) == False:
			print(c)

if (a>b) == False:
	if (a>c) == False:
		if(b>c) == True:
			print(c)
			
-- EXECUTION TIME:
0.15015
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
258
---- user output:
258
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
77
---- user output:
77
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
456
---- user output:
456
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
